tests/resources/invalid/type/class/generic_unknown_type.mamba
class MyClass[A is UnknownType]
    def f() -> Int => 10